fix blog spacing

--- a/frontend/src/components/BlogInfo/BlogInfo.css
+++ b/frontend/src/components/BlogInfo/BlogInfo.css
@@ -44,7 +44,7 @@
 }
 
 .toast-container {
-  top: 250px;
+  top: 50px;
 }
 
 .blog-title {
